--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ header{
     padding: 20px 40px;
 }
 
+main{
+    padding: 20px 40px;
+}
+
 ul{
     list-style: none;
 }
 
-div{
+div.border{
     border: 2px dashed black;
 }
 
@@ -43,4 +47,14 @@ ul.flex{
 .width-logo{
     width: 25%;
     padding: 5px
+}
+
+.blue-background{
+    background-color: blue;
+}
+
+.pink-square{
+    height: 250px;
+    background-color: hsl(300deg 76.06% 72.16%);
+    padding: 2rem;
 }
